<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EngagementActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAA249"
        android:foreground="@drawable/screen2_wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/button_style"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/topPanel3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00000000"
        android:foreground="@drawable/image_style"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button_style"
        tools:ignore="ContentDescription,UnusedAttribute" />

    <Button
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:background="#00FFFFFF"
        android:onClick="back"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:icon="@drawable/abc_vector_test"
        app:iconTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Start"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_style"
        android:onClick="startGallery"
        android:paddingTop="2dp"
        android:text="@string/gallery"
        android:textColor="#000000"
        app:backgroundTint="#fcce37"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Live"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_style"
        android:onClick="startLive"
        android:paddingTop="2dp"
        android:text="@string/live"
        android:textColor="#000000"
        app:backgroundTint="#fcce37"
        app:layout_constraintBottom_toBottomOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/screen2_title"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/instruction2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/instruction2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/instruction2"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>